# elabftw-python-api

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  build_docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: elabapi.doctree
.github/workflows/: deploy-docs.yml
_sources/: api.rst.txt
_sources/api_reference/: elabapi.rst.txt  modules.rst.txt
api_reference/: modules.html
docs/: conf.py  index.rst
docs/_build/: .buildinfo  api.html  index.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree
docs/_build/.doctrees/api_reference/: modules.doctree
docs/_build/api_reference/: elabapi.html
elabapi/: __init__.py  elabapi.py
