[tool.poetry]
name = "elabapi"
version = "0.0.1"
description = "A simple ELabFTW API client"
authors = ["Joshua Taillon <joshua.taillon@nist.gov>"]
license = "NIST Public License"
readme = "README.md"
packages = [{include = "elabapi"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.2.2"
sphinx = "^8.0.2"
myst-parser = "^4.0.0"
sphinxcontrib-apidoc = "^0.5.0"
pydata-sphinx-theme = "^0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
